# repro-424

./: Cargo.toml
src/: header.proto  header.rs  main.rs
